--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,15 +13,16 @@
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 60px;
-    height: 25px;
-    top: 100%;
+    height: 20px;
+    top: 105%;
     left: 50%;
-    margin-left: -40px;
+    margin-left: -33px;
     background-color: black;
     color: white;
     text-align: center;
-    padding: 5px 0;
+    padding: 2px 0;
     border-radius: 6px;
+    font-weight: bold;
 
     /* Position the tooltip text - see examples below! */
     position: absolute;
